@@ -1,4 +1,5 @@
 require 'spec/version'
+require 'spec/callback'
 require 'spec/expectations'
 require 'spec/mocks'
 require 'spec/runner'
