@@ -2,9 +2,10 @@ require File.dirname(__FILE__) + '/../../spec_helper.rb'
 
 module Spec
   module Runner
-    context "Specification" do
+    context "A Specification instance" do
       setup do
         @reporter = mock("reporter")
+        Specification.send(:current=, nil)
       end
 
       specify "should add itself to reporter when calling run dry" do
@@ -44,6 +45,19 @@ module Spec
       specify "should not match if name does not match" do
         spec=Specification.new("otherspec")
         spec.matches_matcher?(SpecMatcher.new("context spec", "context")).should_be(false)
+      end
+
+      specify "should not run spec if setup fails" do
+        spec_ran = false
+        spec=Specification.new("should pass") do
+          spec_ran = true
+        end
+        @reporter.stub!(:spec_started)
+        @reporter.stub!(:spec_finished)
+        setup = proc {raise "Setup error"}
+        spec.run(@reporter, setup, nil, nil, ::Spec::Runner::ExecutionContext.new(nil))
+        spec_ran.should == false
+        @reporter.__verify
       end
 
       specify "should run spec in scope of execution context" do
@@ -113,7 +127,49 @@ module Spec
       specify "should accept an options hash following the spec name" do
         spec = Specification.new("name", :key => 'value')
       end
-      
+
+      specify "should update the current spec only when running the spec" do
+        @reporter.stub!(:spec_started)
+        @reporter.stub!(:spec_finished)
+
+        spec = Specification.new("spec") do
+          Specification.current.should == spec
+        end
+
+        Specification.current.should_be_nil
+        setup = proc {Specification.current.should == spec}
+        teardown = proc {Specification.current.should == spec}
+        spec.run(@reporter, setup, teardown, nil, ::Spec::Runner::ExecutionContext.new(nil))
+        Specification.current.should_be_nil
+      end
+
+      specify "should notify before_setup callbacks before setup" do
+        spec = Specification.new("spec")
+        @reporter.stub!(:spec_started)
+        @reporter.stub!(:spec_finished)
+
+        mock = mock("setup mock")
+        mock.should_receive(:before_setup).ordered
+        mock.should_receive(:setup).ordered
+
+        spec.before_setup {mock.before_setup}
+        setup = proc {mock.setup}
+        spec.run(@reporter, setup, nil, nil, ::Spec::Runner::ExecutionContext.new(nil))
+      end
+
+      specify "should notify after_teardown callbacks after teardown" do
+        spec = Specification.new("spec")
+        @reporter.stub!(:spec_started)
+        @reporter.stub!(:spec_finished)
+
+        mock = mock("teardown mock")
+        mock.should_receive(:teardown).ordered
+        mock.should_receive(:after_teardown).ordered
+
+        spec.after_teardown {mock.after_teardown}
+        teardown = proc {mock.teardown}
+        spec.run(@reporter, nil, teardown, nil, ::Spec::Runner::ExecutionContext.new(nil))
+      end
     end
   end
 end
