@@ -63,7 +63,3 @@ require File.dirname(__FILE__) + '/../spec_helper'
     end
   end
 end
-
-
-
-
